@@ -974,11 +974,6 @@ INSERT INTO COLOR VALUES(676,'JUNIT COLOR 154',0,'',NULL,NULL,NULL,NULL,NULL)
 INSERT INTO CUSTOMER_STATE VALUES(43,'AK')
 INSERT INTO FORMULA VALUES('8D399FB4C0A80116081480A154F71F21','HTML TEST','<p>\u000a\u0009Esto es una prueba<br />\u000a\u0009de <em><strong>HTML</strong></em><br de="" />\u000a\u0009Dex oscuro <strong>negro</strong> y tr&aacute;gico <font color="#ff0000">rojo</font>, de muerte y <strong>dolor<br />\u000a\u0009Y largo</strong>,<span style="background-color: rgb(153, 204, 0);"> verde </span>y <font color="#993300"><strong>marr&oacute;n</strong></font> como los <em>ojitos</em> del <font size="5">mundo</font>.<br />\u000a\u0009&nbsp;</p>\u000a')
 INSERT INTO FORMULA VALUES('ff80808231281e6501312820053d0000','L''AJUNTAMENT','L''Ajuntament')
-INSERT INTO FORMULA VALUES('ff8080824b53edad014b54345ab00008','PROVA','<p>\u000a\u0009Esto es una <strong>prueba</strong>. y me gusta</p>\u000a')
-INSERT INTO FORMULA VALUES('ff8080824b53edad014b5446409b0009','PROVA','<p>\u000a\u0009Hola <em>no</em> soy yo</p>\u000a')
-INSERT INTO FORMULA VALUES('ff8080824b53edad014b5447eb55000a','PROVA 3','<p>\u000a\u0009&ccedil;&ccedil;&ccedil;Soc la <strike>prova</strike>.</p>\u000a')
-INSERT INTO FORMULA VALUES('ff8080824b53edad014b54492ec2000b','PROVA 4','<p>\u000a\u0009From <u>Safari</u>.</p>\u000a')
-INSERT INTO FORMULA VALUES('ff8080824b53edad014b544c171f000c','PROVA FROM IE9','<p>\u000a\u0009<em><strong>Microsoft</strong></em></p>\u000a')
 INSERT INTO INGREDIENT VALUES('03C59CF0C0A8011600000000618CC74B','CAFE','03C6E1ADC0A8011600000000498BC537',NULL)
 INSERT INTO INGREDIENT VALUES('03C5C64CC0A80116000000009590B64C','AZUCAR','03C6E1ADC0A8011600000000498BC537',NULL)
 INSERT INTO INGREDIENT VALUES('03C6B61AC0A8011600000000AB4E7ACB','LECHE','03C6E1ADC0A8011600000000498BC537',NULL)
