@@ -1,0 +1,26 @@
+package org.openxava.test.model;
+
+import javax.persistence.*;
+
+import org.openxava.annotations.*;
+import org.openxava.model.*;
+
+/**
+ * 
+ * @author Javier Paniza
+ */
+@Entity
+public class Skill extends Identifiable {
+
+	@Column(length=60) @Required
+	private String description;
+
+	public String getDescription() {
+		return description;
+	}
+
+	public void setDescription(String description) {
+		this.description = description;
+	}
+			
+}
